# train4all

./: .gitignore  README.md  pyproject.toml
examples/: README.md
examples/mnist/: train.py
train4all/trainer/: __init__.py  base.py
train4all/utils/: __init__.py  common.py  dict_utils.py  file_utils.py  log_utils.py  plot_utils.py
